# sampleCrewAI

self_evaluation_loops_flow/: README.md  pyproject.toml
self_evaluation_loops_flow/src/self_evaluation_loops_flow/: main.py
self_evaluation_loops_flow/src/self_evaluation_loops_flow/crews/shakespeare_crew/: shakespeare_crew.py
self_evaluation_loops_flow/src/self_evaluation_loops_flow/crews/x_post_review_crew/: x_post_review_crew.py
self_evaluation_loops_flow/src/self_evaluation_loops_flow/tools/: CharacterCounterTool.py
