[project]
name = "self_evaluation_loops_flow"
version = "0.1.0"
description = "self_evaluation_loops_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
kickoff = "self_evaluation_loops_flow.main:kickoff"
run_crew = "self_evaluation_loops_flow.main:kickoff"
plot = "self_evaluation_loops_flow.main:plot"
run_with_trigger = "self_evaluation_loops_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
